--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,34 +1,38 @@
-name: Build and Deploy
+name: Deploy to GitHub Pages
+
 on:
   push:
-    branches:
-      - master
-  pull_request:
-    branches:
-      - master
+    branches: [ main, master ]
+
+permissions:
+  contents: write
+
 jobs:
-  test-build-deploy:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout
-        uses: actions/checkout@v2
+      - name: Checkout 🛎️
+        uses: actions/checkout@v3
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v2
+      # 这里我们需要先安装 pnpm，因为原项目是用 pnpm 管理的
+      - name: Install pnpm
+        uses: pnpm/action-setup@v2
         with:
-          node-version: lts/Hydrogen
-      
-      - name: Install Dependencies
-        run: npm -g install pnpm@8.6.10 && pnpm i
+          version: 8
 
-      # - name: Run Tests
-      #   run: yarn test
-
-      - name: Run Build
-        run: pnpm run build
-
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4.2.5
+      - name: Setup Node.js ⚙️
+        uses: actions/setup-node@v3
         with:
-          branch: gh-pages
+          node-version: 18
+          cache: 'pnpm'
+
+      - name: Install and Build 🔧
+        run: |
+          pnpm install
+          pnpm run build
+
+      - name: Deploy 🚀
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
           folder: dist
+          branch: gh-pages
